--- a/src/DefaultLayout/components/Player/Player.module.scss
+++ b/src/DefaultLayout/components/Player/Player.module.scss
@@ -43,6 +43,7 @@
 
 .control {
    width: 500px;
+   margin-right: 10%;
    font-size: 2rem;
    display: flex;
    flex-direction: column;
